ANDROIDPLOT-150 - Ran through IDEA12's built in analyzer.